--- a/Pages/Index.razor.css
+++ b/Pages/Index.razor.css
@@ -1,1 +1,15 @@
-﻿
+﻿.page-class {
+    height: 100%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
