--- a/Pages/Creator/EditQuiz.razor.css
+++ b/Pages/Creator/EditQuiz.razor.css
@@ -4,3 +4,12 @@
     align-items: center;
     width: 100%;
 }
+
+.clear {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: auto;
+    height: auto;
+}
