--- a/Pages/Game/GamePage.razor
+++ b/Pages/Game/GamePage.razor
@@ -15,61 +15,54 @@
     }
     else
     {
-        @if (!Closed)
+        @if (!quizService.Sessions[sessionId].Closed)
         {
-            @if (!quizService.Sessions[sessionId].Users[nickname])
+            @if (!quizService.Sessions[sessionId].CheckIfUserAlreadyAnswered(nickname!))
             {
-                <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center">
-                    <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
-                        <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].CurrentQuestion class="rz-color-white"></RadzenText>
-                        <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].TimeAsString class="rz-color-white"></RadzenText>
+                @if (@quizService.Sessions[sessionId].GetCurrentQuestion().Type == QuestionType.MultipleChoice)
+                {
+                    <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center">
+                        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
+                            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].GetCurrentQuestion().Text class="rz-color-white"></RadzenText>
+                            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].TimeAsString class="rz-color-white"></RadzenText>
 
+                        </RadzenStack>
+                        @foreach (Answer answer in quizService.Sessions[sessionId].GetCurrentAnswers())
+                        {
+                            <RadzenButton Variant="Variant.Outlined" Text="@answer.Text" ButtonStyle="ButtonStyle.Secondary" class="rz-ripple" Style="margin: 10px;" Click="(() => OnAnswerSelect(answer))" />
+                        }
                     </RadzenStack>
-                    @foreach (string answer in quizService.Sessions[sessionId].CurrentAnswers)
-                    {
-                        <RadzenButton Variant="Variant.Outlined" Text="@answer" ButtonStyle="ButtonStyle.Secondary" class="rz-ripple" Style="margin: 10px;" Click="(() => OnAnswerSelect(answer))" />
-                    }
-                </RadzenStack>
+                }
+                else if (@quizService.Sessions[sessionId].GetCurrentQuestion().Type == QuestionType.ShortAnswer)
+                {
+                    <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center">
+                        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
+                            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].GetCurrentQuestion().Text class="rz-color-white"></RadzenText>
+                            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@quizService.Sessions[sessionId].TimeAsString class="rz-color-white"></RadzenText>
+
+                        </RadzenStack>
+                        <RadzenTextBox Placeholder="Type answer here..." Style="width: 90%" @bind-Value=@ShortAnswer />
+                        <RadzenButton Variant="Variant.Outlined" Text="Submit" ButtonStyle="ButtonStyle.Secondary" class="rz-ripple" Style="margin: 10px;" Click="(() => OnShortAnswerSubmit(ShortAnswer))" />
+                    </RadzenStack>
+                }
+
             }
             else
             {
-                @foreach (KeyValuePair<string, List<string>> entry in quizService.Sessions[sessionId].UserAnswers)
-                {
-                    <RadzenText class="rz-color-white" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@entry.Key></RadzenText>
-                    @foreach (string user in entry.Value)
-                    {
-                        <RadzenText class="rz-color-series-3" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@user></RadzenText>
-                    }
-                }
-                @*<RadzenChart>
-                <RadzenColumnSeries Data="@quizService.Sessions[Int32.Parse(sessionId)].UserAnswers." TItem="" CategoryProperty="Quarter" Title="Answers" LineType="LineType.Dashed" ValueProperty="Revenue">
-                </RadzenColumnSeries>
-                <RadzenColumnOptions Radius="5" />
-                <RadzenValueAxis>
-                    <RadzenGridLines Visible="true" />
-                    <RadzenAxisTitle Text="Number of votes" />
-                </RadzenValueAxis>
-            </RadzenChart>*@
+                <RadzenText class="rz-color-series-3" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text="Waiting for other players..." ></RadzenText>
             }
-            
-        }
+        }    
         else
         {
-            @foreach (KeyValuePair<string, List<string>> entry in quizService.Sessions[sessionId].UserAnswers)
+            if (quizService.Sessions[sessionId].CheckIfUserAnsweredCorrectly(nickname!))
             {
-                @if (quizService.Sessions[sessionId].CorrectAnswers.Contains(entry.Key))
-                {
-                    <RadzenText class="rz-color-success-light" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@entry.Key></RadzenText>
-                }
-                else
-                {
-                    <RadzenText class="rz-color-white" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@entry.Key></RadzenText>
-                }
-                @foreach (string user in entry.Value)
-                {
-                    <RadzenText class="rz-color-series-3" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text=@user></RadzenText>
-                }
+                <RadzenText class="rz-color-series-3" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text="Correct answer"></RadzenText>
             }
+            else
+            {
+                <RadzenText class="rz-color-series-3" TextStyle="TextStyle.Subtitle2" TagName="TagName.H3" Text="Incorrect answer"></RadzenText>
+            }
+
         }
         
 
@@ -91,15 +84,19 @@ else
     bool ShowGame = true;
     bool Closed = false;
     bool UniqueName = false;
-
+    string ShortAnswer = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
-        sessionId = Int32.Parse(sessionIdString);
-        if (!quizService.Sessions[sessionId].Users.ContainsKey(nickname))
+        sessionId = Int32.Parse(sessionIdString!);
+        if (quizService.Sessions[sessionId].CheckIfNewUser(nickname!))
         {
             UniqueName = true;
-            quizService.Sessions[sessionId].Users.Add(nickname,false);
+            quizService.Sessions[sessionId].AddUser(nickname!);
+            if (!quizService.Sessions[sessionId].CheckIfFirstJoin(nickname!))
+            {
+                quizService.Sessions[sessionId].UserPoints.Add(nickname!, 0);
+            }
         }
 
         quizService.Sessions[sessionId].UpdateEvent += async () => await InvokeAsync(() => Update());
@@ -108,25 +105,25 @@ else
         quizService.Sessions[sessionId].StartGameEvent += async () => await InvokeAsync(() => this.StateHasChanged());
         quizService.Sessions[sessionId].QuestionClosedEvent += async () => await InvokeAsync(() => this.StateHasChanged());
         quizService.Sessions[sessionId].TimerCountEvent += async () => await InvokeAsync(() => this.StateHasChanged());
+        quizService.Sessions[sessionId].StateChangedEvent += async () => await InvokeAsync(() => this.StateHasChanged());
         await base.OnInitializedAsync();
     }
 
-    void OnAnswerSelect(string answer)
+    void OnAnswerSelect(Answer answer)
     {
-        quizService.Sessions[sessionId].AddToUserAnswers(answer, nickname);
-        quizService.Sessions[sessionId].Users[nickname] = true;
+        quizService.Sessions[sessionId].AddToUserAnswers(answer, nickname!);
+        quizService.Sessions[sessionId].AddToSubmittedAnswers(answer, nickname!);
 
     }
     void Update()
     {
-        if (quizService.Sessions[sessionId].Users[nickname])
+        if (quizService.Sessions[sessionId].CheckIfUserAlreadyAnswered(nickname!))
         {
             this.StateHasChanged();
         }
     }
     void NextQuestion()
     {
-        quizService.Sessions[sessionId].Users[nickname] = false;
         Closed = false;
         this.StateHasChanged();
     }
@@ -135,11 +132,18 @@ else
         Closed = true;
         this.StateHasChanged();
     }
+    void OnShortAnswerSubmit(string text)
+    {
+        Answer answer = new Answer(text, quizService.Sessions[sessionId].GetCurrentQuestion().CheckIfAnswerIsCorrect(text));
+        quizService.Sessions[sessionId].AddToUserAnswers(answer, nickname!);
+        quizService.Sessions[sessionId].AddToSubmittedAnswers(answer, nickname!);
+        
+    }
     public void Dispose()
     {
         if (UniqueName)
         {
-            quizService.Sessions[sessionId].Users.Remove(nickname);
+            quizService.Sessions[sessionId].RemoveUser(nickname!);
         }
     }
 
